--- a/resources/style.css
+++ b/resources/style.css
@@ -12,5 +12,21 @@ html {
 
 body {
   font: Helvetica;
-  margin: 0; 
+  margin: 0;
+}
+
+header {
+  background-color: cadetblue;
+  display: flex;
+  font-size: 1rem;
+  font-family: helvetica; 
+}
+
+.container {
+}
+
+.logo {
+  padding: 1rem 1rem 2rem;
+  color: white;
+
 }
